--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.2.0",
     "@types/uuid": "^9.0.1",
     "rxjs": "~7.5.0",
+    "tailwindcss-filters": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
