--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "baseHref": "/ngTailwind/dist/",
             "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
